# flasky

./: LICENSE  README.rst  Readme.md  fasak.py  flasky.py  pyproject.toml
flasky/: __init__.py  flasky.py
