[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "flasky"
author = "sohail yunus shaik"
author-email = "sohail.yunusha1@gmail.com"
home-page = "https://gitlab.com/sohailsha1"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["Werkzeug"]
