[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "fasak"
author = "sohail yunus shaik"
author-email = "sohail.yunusha1@gmail.com"
home-page = "https://github.com/sohail535/flasky"
classifiers = ["License :: OSI Approved :: MIT License"]
requires = ["Werkzeug"]
